# flutter_rust_project_1

./: README.md  local.properties  pubspec.yaml
android/: gradle.properties
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/flutter_rust_project_1/: MainActivity.kt
android/app/src/profile/: AndroidManifest.xml
lib/: bridge_generated.dart  ffi.dart  main.dart
ping_bridge/: Cargo.toml
ping_bridge/src/: api.rs  bridge_generated.rs
test/: widget_test.dart
