[package]
name = "ping_bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib", "staticlib", "cdylib"]


[dependencies]
flutter_rust_bridge = "1"
anyhow = "1"
log = "*"
libc = "*"
serde_json = "1"
pnet_packet = "0.31"
env_logger = "0.9"
socket2 = { version = "0.4", features = ["all"] }
